2002-03-04  Jeff Freedman  <jeff@amy.nerble.net>

	* server/server.cc: Handle ::view_pos message from ExultStudio.
	* gamewin.cc:  Public set_scrolls(tx, ty) added.
	* mapedit/locator.cc:  Locator scrollbars update view in Exult.

2002-03-05  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc , gumps/GameplayOptions_gump.*, gumps/Gump_manager.*
	  gumps/gump_utils.cc : Right click now closes all gumps. Added config
	  setting and updated game options gump with the setting. The setting
	  also effects Modal gumps which previously always closed on a right
	  click. Default enabled.

2002-03-03  Jeff Freedman  <jeff@amy.nerble.net>

	* tools/ipack.cc,ipack.txt:  Can now have all 'flat' frames in a
	single tiled file.

2002-02-27  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Spark is NOT a ghost.
	* actors.cc,gamewin.cc:  Combat_difficulty used.

2002-02-26  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc: Delete missile-launcher in remove_this();
	* usecode/ucinternal.cc (public): Find_nearby() now handles case
	where parm. 0 is a 4-elem. array.  Fixes 'destroy trap' spell.

2002-02-25  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Handle sched. opcode 0x29:
	Wait nn game hours.

	* palettes.h: Define palette names here.
	* tools/ipack.cc (public): Algorithmically create 
	palettes 1-10 used by the Exult engine.

2002-02-24  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Single-click also sets tile when terrain-editing.

2002-02-22  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* shapes/pngio.cc: Rewrote transparency handling; still trying to 
	get it right.

2002-02-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* imagewin/ibuf8.cc: used memcpy() on Solaris for ibuf8::copy8

2002-02-22  Jeff Freedman  <jeff@amy.nerble.net>

	* gamemap.cc (Game_map): Always look through all the terrains to
	see if one needs to be saved when map-editing.
	* gamewin.cc: Okay to double-click without pathfinding if map-editing.