@@ -64,6 +64,20 @@ void Scale_2xBilinear
 	const Manip_pixels& manip	// Manipulator methods.
 );
 
+//Scale X2 with bilinear plus interpolation.
+template <class Source_pixel, class Dest_pixel, class Manip_pixels>
+void Scale_2xBilinearPlus
+(
+	Source_pixel *source,		// ->source pixels.
+	int srcx, int srcy,		// Start of rectangle within src.
+	int srcw, int srch,		// Dims. of rectangle.
+	int sline_pixels,		// Pixels (words)/line for source.
+	int sheight,			// Source height.
+	Dest_pixel *dest,		// ->dest pixels.
+	int dline_pixels,		// Pixels (words)/line for dest.
+	const Manip_pixels& manip	// Manipulator methods.
+);
+
 // Point Sampling Scaler
 void Scale_point
 (
